# ignis-rek

./: .gitignore  config.py  instruction.md  main.py  pyproject.toml  style.scss
modules/: __init__.py
modules/audio/: __init__.py  volume.py
modules/bar/: __init__.py  bar.py
modules/battery/: __init__.py  battery.py
modules/control_center/: __init__.py  control_center.py  notification_icon.py  notification_menu.py
modules/notification_popup/: __init__.py  notification_popup.py
modules/power_menu/: __init__.py  power_menu.py
modules/price_tracker/: __init__.py  price_tracker.py  utils.py
modules/title/: __init__.py  title.py
modules/tray/: __init__.py  tray.py
modules/utils/: __init__.py  utils.py
modules/workspaces/: __init__.py  hyprland_patch.py  workspaces.py
