[project]
name = "ignis-rek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "ignis",
    "requests>=2.32.4",
]

[tool.uv.sources]
ignis = { git = "https://github.com/ignis-sh/ignis.git", rev = "v0.5.1" }
